--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "author": "sura0111 <sura0111@gmail.com>",
   "license": "MIT",
+  "keywords": ["typescript", "node.js", "npm"],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
